{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 9,
  "lineage": "43799ab9-5efe-f626-141b-2a5110fc1ec2",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "docker",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-061ac2e015473fbe2",
            "arn": "arn:aws:ec2:us-east-1:765987856902:instance/i-07c7a99d86a2ce1bd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07c7a99d86a2ce1bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "docker",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fabb4c948d8086d7",
            "private_dns": "ip-10-0-1-208.ec2.internal",
            "private_ip": "10.0.1.208",
            "public_dns": "ec2-3-95-226-143.compute-1.amazonaws.com",
            "public_ip": "3.95.226.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0477f8738a7413b50",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09e42e0326ec31bb5",
            "tags": {
              "Name": "docker_tf"
            },
            "tags_all": {
              "Name": "docker_tf"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02542384ac1406fe4"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.compute.aws_key_pair.aws-key",
            "module.compute.data.aws_ssm_parameter.webserver-ami",
            "module.vpc.aws_security_group.tf_public_sg",
            "module.vpc.aws_subnet.tf_public_subnet",
            "module.vpc.aws_vpc.tf_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tf_igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765987856902:internet-gateway/igw-0c0d04f5cddc40441",
            "id": "igw-0c0d04f5cddc40441",
            "owner_id": "765987856902",
            "tags": {
              "Name": "Terraform-Gateway"
            },
            "tags_all": {
              "Name": "Terraform-Gateway"
            },
            "vpc_id": "vpc-07c96ca6a731cf194"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tf_public_route",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765987856902:route-table/rtb-092ba09e20ae6ea94",
            "id": "rtb-092ba09e20ae6ea94",
            "owner_id": "765987856902",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c0d04f5cddc40441",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform-Public-RouteTable"
            },
            "tags_all": {
              "Name": "Terraform-Public-RouteTable"
            },
            "vpc_id": "vpc-07c96ca6a731cf194"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.tf_igw",
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tf_public_assoc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0706c3507feef0b5d",
            "route_table_id": "rtb-092ba09e20ae6ea94",
            "subnet_id": "subnet-09e42e0326ec31bb5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.tf_igw",
            "module.vpc.aws_route_table.tf_public_route",
            "module.vpc.aws_subnet.tf_public_subnet",
            "module.vpc.aws_vpc.tf_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_public_sg",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765987856902:security-group/sg-02542384ac1406fe4",
            "description": "Used for access to the public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02542384ac1406fe4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from TCP/80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf_public_sg",
            "name_prefix": "",
            "owner_id": "765987856902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Terraform-SecurityGroup"
            },
            "tags_all": {
              "Name": "Terraform-SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c96ca6a731cf194"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf_public_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765987856902:subnet/subnet-09e42e0326ec31bb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09e42e0326ec31bb5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "765987856902",
            "tags": {
              "Name": "Terraform-Subnet"
            },
            "tags_all": {
              "Name": "Terraform-Subnet"
            },
            "vpc_id": "vpc-07c96ca6a731cf194"
          },
          "dependencies": [
            "module.vpc.aws_vpc.tf_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf_vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765987856902:vpc/vpc-07c96ca6a731cf194",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0002c3256215931b0",
            "default_route_table_id": "rtb-00709321ee8543d0e",
            "default_security_group_id": "sg-071cc5a31a28079bf",
            "dhcp_options_id": "dopt-0efc15ff23fc993d6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-07c96ca6a731cf194",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00709321ee8543d0e",
            "owner_id": "765987856902",
            "tags": {
              "Name": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "Terraform-VPC"
            }
          }
        }
      ]
    }
  ]
}